# pycodeadvisor

./: .gitignore  README.md  multi_errors.py  notes.txt  pycodeadvisor.yaml  pycodeadvisor_notes.md  pyproject.toml  syntax_test.py  working_file.py
pycodeadvisor/: ai_worker.py  cli.py  config.py  models.py  syntax_analyzer.py
pycodeadvisor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pycodeadvisor/providers/: __init__.py  base_provider_interface.py  claude_provider.py  gemini_provider.py  openAI_provider.py
